<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_store"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.hanan.musicapp.StoreActivity">

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#6cb8fe"
        android:padding="8dp">
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/homesmall"
            android:id="@+id/home_Btn"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/favorites_Activity_Btn"
            android:text="@string/favorites"
            android:textSize="12sp"
            android:drawableLeft="@android:drawable/btn_star_big_on"/>
        <Button
            android:id="@+id/Search_Activity_Btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/purchase_title"
        android:layout_width="match_parent"
        android:text="@string/download_store"
        android:gravity="center"
        android:padding="8dp"
        style="@style/title"
        android:layout_below="@+id/Header"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/purchase_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/purchase_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:src="@android:drawable/ic_media_play"/>
        <TextView
            android:paddingTop="10dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/song_item"
            android:background="#BBDEFB"/>
        <Button
            android:id="@+id/purchase_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:drawableLeft="@android:drawable/stat_sys_download"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_below="@id/purchase_item"
        android:text="@string/store_screen_explanation"/>
</RelativeLayout>
