<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_favorites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.hanan.musicapp.FavoritesActivity">

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#6cb8fe"
        android:padding="8dp">
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/homesmall"
            android:id="@+id/home_Btn"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/Store_Activity_Btn"
            android:text="@string/store"
            android:drawableLeft="@drawable/storesmall"
            />
        <Button
            android:id="@+id/Search_Activity_Btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/title_fav_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_favorite_tracks"
        style="@style/title"
        android:gravity="center"
        android:layout_below="@+id/Header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Explanation_TV"
        android:layout_below="@id/title_fav_TV"
        android:layout_marginTop="16dp"
        android:text="@string/Favorites_explanation"/>
</RelativeLayout>
