<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_song_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hanan.musicapp.SongDetailActivity"
    android:padding="8dp">
    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#6cb8fe"
        android:padding="8dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/homesmall"
            android:id="@+id/home_Btn"
           />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/favorites_Activity_Btn"
            android:text="@string/favorites"
            android:textSize="12sp"
            android:drawableLeft="@android:drawable/btn_star_big_on"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/Store_Activity_Btn"
            android:text="@string/store"
            android:drawableLeft="@drawable/storesmall"
            android:textSize="12sp"
            />
        <Button
            android:id="@+id/Search_Activity_Btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:textSize="12sp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        style="@style/title"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Header"
        android:text="@string/track_name"
        android:id="@+id/title_tv"
        android:paddingTop="8dp"/>
    <ImageButton
        android:id="@+id/favorite_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/btn_star_big_off"
        android:layout_below="@+id/Header"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@android:drawable/btn_star_big_off" />
    <ImageButton
        android:id="@+id/favorite_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/btn_star_big_on"
        android:layout_below="@+id/Header"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@android:drawable/btn_star_big_on" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Explanation_TV"
        android:layout_below="@id/favorite_off"
        android:layout_marginTop="16dp"
        android:text="@string/detail_screen_explanation"/>
<LinearLayout
    android:id="@+id/track_control"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">

    <ImageButton
        android:id="@+id/previous_imageButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_previous"
        android:layout_marginBottom="11dp" />
    <ImageButton
        android:id="@+id/rewind_imageButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_rew"
        android:layout_marginBottom="11dp"
        />
    <ImageButton
        android:id="@+id/Pause_imageButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_pause"
        android:layout_marginBottom="11dp"
        />
    <ImageButton
        android:id="@+id/Play_imageButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_play"
        android:layout_marginBottom="11dp"
        android:background="#4CAF50"
        android:padding="6dp"
        />
    <ImageButton
        android:id="@+id/Stop_imageButton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/stop_icon"
        android:layout_marginBottom="11dp"
        android:padding="16dp"
        />
        <ImageButton
            android:id="@+id/ff_imageButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_ff"
            android:layout_marginBottom="11dp"
             />
        <ImageButton
            android:id="@+id/next_imageButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:src="@android:drawable/ic_media_next"
             />
</LinearLayout>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/track_control"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="8dp"/>



</RelativeLayout>

